@@ -1,1 +1,3 @@
-https://today.line.me/tw/v2/article/GVZz25?utm_source=copyshare
+https://today.line.me/tw/v2/article/vEo5w3?utm_source=lineshare
+https://money.udn.com/money/story/5612/5404848
+https://money.udn.com/money/story/5612/5404850
